Fixed Horizental scroll bar, was visible on chrome and safari, now is hidden the mini scroll bar and popluars scroll bar , delate popular items we shrinked down in to one resuable component

--- a/src/Containers/Header/Header.scss
+++ b/src/Containers/Header/Header.scss
@@ -67,6 +67,10 @@
   overflow-x: auto;
   -ms-overflow-style: none;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   width: 100%;
   cursor: pointer;
 
